# Kafka

./: README.md  compose.yaml  pyproject.toml
examples/: live_consumer.py  live_producer.py  live_topic_setup.py
scripts/: start-kafka.sh
